--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
     <link rel="stylesheet" href="./main.css" >
 </head>
 <body>
-    <h1>Hello!</h1>
+    
+   <div class="contrainer">
+    <div class="row">
+        <div class="col border">Column 1</div>
+        <div class="col border">Column 2</div>
+        <div class="col border">Column 3</div>
+        <div class="col border">Column 4</div>
+    </div>
+    <div class="row">
+        <div class="col border">Column 1</div>
+        <div class="col-6 border">Column 2 (6 of 12)</div>
+        <div class="col border">Column 3</div>
+        <div class="col-4 border">Column 4 (4 of 12)</div>
+    </div>
+    <div class="row">
+        <div class="col-6 border"> First</div>
+        <div class="col-4 border">Second</div>
+        <div class="col-3 border">Third</div> <!-- wraps around since its over 12-->
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6  col-lg-3 border">Chicago</div>
+        <div class="col-12 col-md-6  col-lg-3 border">New York</div>
+        <div class="col-12 col-md-6  col-lg-3 border">Los Angeles</div>
+        <div class="col-12 col-md-6  col-lg-3 border">Columbus</div>
+        <div class="col-12 col-md-6  col-lg-3 border">San Francisco</div>
+        <div class="col-12 col-md-6  col-lg-3 border">Miami</div>
+        <div class="col-12 col-md-6  col-lg-3 border">Boston</div>
+        <div class="col-12 col-md-6  col-lg-3 border">DC</div>
+    </div>
+    </div>
+
 </body>
 </html>
